Quorum/Library/Tests/TypeChecker/Pass/ExpAssignIntObjInteger.quorum
class Main
    action Main
        Integer int
        int = cast(Integer, 5)
        if int:GetValue() = 5
            output "passed"
        end
    end
end