Quorum/Library/Tests/TypeChecker/Fail/ExpAssignIntObjBoolean.quorum
class main
    action Main
        Integer int
        int = cast(Integer, true)
    end
end